--- a/info.yml
+++ b/info.yml
@@ -3,8 +3,10 @@ project:
   owner: 'CS169L-23'
   teamId: '99'
   identities:
-    pivotal: 'https://www.pivotaltracker.com/n/projects/2630626'
-    heroku: 'https://blutestdoesnotexist.herokuapp.com/'
+    pivotal:
+      url: 'https://www.pivotaltracker.com/n/projects/2630626'
+    heroku:
+      url: 'https://blutestdoesnotexist.herokuapp.com/'
   members:
     member1:
       name: 'Rtest'
